--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,11 +11,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/home">About</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/experience">Experience</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/skills">Skills</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/projects">Projects</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/education">Education</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/home')">About</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/experience')">Experience</a>
+            </li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/skills')">Skills</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/projects')">Projects</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/education')">Qualification</a>
+            </li>
             <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/awards">Awards</a></li> -->
         </ul>
     </div>
