--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
             </li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/skills')">Skills</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/projects')">Projects</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/education')">Qualification</a>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="navTo('/education')">Education</a>
             </li>
             <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/awards">Awards</a></li> -->
         </ul>
